--- a/launch/mocap.yaml
+++ b/launch/mocap.yaml
@@ -64,7 +64,10 @@ markers:
     'Ball': # the marker ball to pick up
         topic_name: Ball/point
         frame_id: optitrack
-        init_pos: [0.199, -0.013, 0.401]
+        # init_pos: [0.199, -0.013, 0.401]
+        # init_pos: [0.599, 0.181, 0.404] # ball
+        init_pos: [0.569,0.059,0.42] # cube
+        # init_pos : [0.55198,0.0563,0.430] # new ball
     'T3': # the head of the chopsticks that are mounted with two markers
         topic_name: T3/point
         frame_id: optitrack
